优化tab的显示效果